Fix scrollbar styles

--- a/src/components/Header/Notifications/Notifications.module.scss
+++ b/src/components/Header/Notifications/Notifications.module.scss
@@ -43,6 +43,7 @@
   overflow-y: auto;
 
   &::-webkit-scrollbar {
+    display: none;
     width: 0;
   }
 }
