--- a/src/pages/Home/Tasks/TaskInfo/SubTasks/SubTasks.module.scss
+++ b/src/pages/Home/Tasks/TaskInfo/SubTasks/SubTasks.module.scss
@@ -27,6 +27,7 @@
   overflow-y: auto;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  display: none;
 
   &::-webkit-scrollbar {
     display: none;
